# HachiShifter

./: .gitignore  README.md  README_en.md  README_ko.md  USERMANUAL.md  USERMANUAL_en.md  USERMANUAL_ja.md  USERMANUAL_ko.md  USERMANUAL_zh-TW.md  vowel_synth.py
.github/workflows/: build.yml
.sisyphus/plans/: hifigan-chunk-optimization.md
.sisyphus/run-continuation/: ses_1ee335870ffeeTEtD6rzvA6heN.json
backend/: README.md
backend/src-tauri/: Cargo.toml  build.rs  tauri.conf.dist-dev.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
backend/src-tauri/src/: commands.rs  config.rs  formant_cache.rs  launch_args.rs  lib.rs  main.rs  models.rs  pitch_editing.rs  project.rs  state.rs  synth_clip_cache.rs
backend/src-tauri/src/audio/: formant_morph.rs  hfspeaks_v2.rs  hifigan_tension.rs  mixdown.rs  soundtouch.rs  time_stretch.rs
backend/src-tauri/src/audio_engine/: engine.rs  io.rs  mix.rs  snapshot.rs  stretch_stream.rs  types.rs
backend/src-tauri/src/commands/: common.rs  dialogs.rs  file_browser.rs  midi.rs  midi_export.rs  params.rs  playback.rs  project.rs  reaper.rs  reaper_clipboard.rs  synth.rs  synth_quick_export_tests.rs  timeline.rs  ui_settings.rs  vocalshifter.rs  vocalshifter_clipboard.rs  waveform.rs
backend/src-tauri/src/import/: midi_import.rs  reaper_import.rs  reaper_parser.rs  vocalshifter_import.rs
backend/src-tauri/src/pitch/: pitch_clip.rs  pitch_config.rs  pitch_progress.rs
backend/src-tauri/src/pitch_analysis/: analysis.rs  mod.rs  schedule.rs
backend/src-tauri/src/renderer/: chain.rs  hifigan.rs  mod.rs
backend/src-tauri/src/vocoder/: fcpe_onnx.rs  hnsep_onnx.rs  nsf_hifigan_onnx.rs
docs/: hifigan_optimization.md  tension_analysis.md
docs/i18n/: README_en.md  README_ja.md  README_ko.md  README_zh-TW.md  USERMANUAL.md  USERMANUAL_en.md  USERMANUAL_ja.md  USERMANUAL_ko.md  USERMANUAL_zh-TW.md
docs/superpowers/plans/: 2026-04-22-bulk-clip-ops-implementation.md  2026-04-22-timeline-bulk-edit-small-bugs.md  2026-04-24-timeline-performance-redesign-implementation.md  2026-04-29-soundtouch-replacement.md  2026-04-30-clip-formant-followup.md  2026-04-30-clip-formant-morph.md  2026-04-30-clip-formant-rewrite.md
docs/superpowers/specs/: 2026-04-22-bulk-clip-ops-design.md  2026-04-24-timeline-performance-redesign-design.md  2026-04-29-pitch-reference-and-project-notebook-design.md  2026-04-29-soundtouch-replacement-design.md  (+3 more)
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: install_deps_linux.sh  install_deps_macos.sh  install_deps_windows.ps1  pack-portable.ps1  set-version.ps1  tauri-before-dev.mjs
soundtouch_dll-2.3.3/: SoundTouchDLL.lib
(+160 files in other folders)
