[package]
name = "HiFiShifter"
version = "0.1.0-beta.9"
description = "A high-quality audio shifter"
authors = ["ARounder"]
edition = "2021"
default-run = "HiFiShifter"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "HiFiShifter"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rfd = "0.15"
hound = "3"
rodio = "0.20"
cpal = "0.15"
arc-swap = "1.7"
symphonia = { version = "0.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "vorbis", "wav"] }
blake3 = "1"
rayon = "1.7"
lru = "0.12"
encoding_rs = "0.8"
midly = "0.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

rustfft = "6"
num-complex = "0.4"
ndarray = { version = "0.16", optional = true }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", features = ["NSString", "NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
objc2 = "0.6"

[features]
default = ["onnx", "vslib"]
onnx = ["dep:ort", "dep:ndarray", "dep:ort-tract"]
vslib = []

# Linux / Windows
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
ort = { version = "2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "cuda"] }

# macOS Apple Silicon (arm64)
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
ort = { version = "2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "cuda"] }

# macOS Intel (x86_64)
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
ort = { version = "2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray", "alternative-backend"] }
ort-tract = { version = "0.3.0+0.22", optional = true }
